# pywuzzuf

./: .gitignore  .gitingestignore  CHANGELOG.md  LICENSE  README.md  prek.toml  pyproject.toml  zensical.toml
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml
docs/: index.md  installation.md  quickstart.md
docs/reference/: exceptions.md  models.md
docs/usage/: client.md  filters.md  pagination.md  resilience.md
src/pywuzzuf/: __init__.py  _http.py  client.py  exceptions.py  filters.py  models.py  pagination.py
src/pywuzzuf/resources/: __init__.py  companies.py  jobs.py
tests/: conftest.py
tests/fixtures/company_details/: batch.json
tests/fixtures/errors/: 403.json  429.json
tests/fixtures/job_details/: batch.json
tests/fixtures/search/: empty.json  page1.json  page2.json
tests/integration/: pipeline_test.py  sync_threading_test.py
tests/live/: live_api_test.py
tests/scripts/: capture_fixtures.py
tests/unit/: client_test.py  companies_resource_test.py  filters_test.py  jobs_resource_test.py  models_test.py  pagination_test.py
